@@ -3,6 +3,10 @@ PPL6 - HISTORY
 
 Version 6.4.9
   - Kompatibilitätsproblem mit OpenSSL 1.x.x behoben
+  - CTCPSocket::Bind kann nun mehrfach aufgerufen werden, um einen
+    Socket an mehrere Adressen oder Ports zu binden.
+  - Funktion StartThread, um einen einen Thread ohne Verwendung der
+    Klasse CThread zu starten
 
 Version 6.4.8 vom 27.07.2011	(CVS-Tag: REL_6_4_8)
   - Datenbankklassen: Neue Funktion "databaseType"
